[package]
name = "session"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2"
getset = "0.1.5"
derive-new = "0.7.0"
regex = "1.11.1"
base64 = "0.22.1"
reqwest = "0.12.15"
futures = "0.3.31"
wasm-bindgen-futures = "0.4.50"

[lib]
crate-type = ["cdylib", "rlib"]
